--- a/Reborn/View/Base.lproj/LaunchScreen.storyboard
+++ b/Reborn/View/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,18 +28,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIconWithoutShadow" translatesAutoresizingMaskIntoConstraints="NO" id="y6y-gd-W8r">
-                                <rect key="frame" x="132" y="271" width="150" height="150"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIconWithShadow" translatesAutoresizingMaskIntoConstraints="NO" id="y6y-gd-W8r">
+                                <rect key="frame" x="157" y="321" width="100" height="100"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="6oO-RW-Fec"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="Q9j-4B-Fs6"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="oKl-eD-I4Q"/>
-                                    <constraint firstAttribute="width" constant="150" id="tPE-eH-gzx"/>
+                                    <constraint firstAttribute="height" constant="100" id="6oO-RW-Fec"/>
+                                    <constraint firstAttribute="width" constant="100" id="tPE-eH-gzx"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="WhiteAndBlackBackground"/>
                         <constraints>
                             <constraint firstItem="y6y-gd-W8r" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="EgY-5u-zxh"/>
                             <constraint firstItem="wMY-G1-WgY" firstAttribute="top" secondItem="y6y-gd-W8r" secondAttribute="bottom" constant="10" id="G0S-f3-hPK"/>
@@ -55,6 +55,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="AppIconWithoutShadow" width="510" height="510"/>
+        <image name="AppIconWithShadow" width="510" height="510"/>
+        <namedColor name="WhiteAndBlackBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
