--- a/Reborn/View/Base.lproj/LaunchScreen.storyboard
+++ b/Reborn/View/Base.lproj/LaunchScreen.storyboard
@@ -17,35 +17,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="重生" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMY-G1-WgY">
-                                <rect key="frame" x="178.5" y="431" width="57" height="34"/>
+                                <rect key="frame" x="178.5" y="404" width="57" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="开启自律生活" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3a-lw-6aZ">
-                                <rect key="frame" x="158" y="475" width="98" height="20"/>
+                                <rect key="frame" x="158" y="448" width="98" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIconWithShadow" translatesAutoresizingMaskIntoConstraints="NO" id="y6y-gd-W8r">
-                                <rect key="frame" x="157" y="321" width="100" height="100"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dlO-SR-m6m">
+                                <rect key="frame" x="157" y="296" width="100" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="6oO-RW-Fec"/>
-                                    <constraint firstAttribute="width" constant="100" id="tPE-eH-gzx"/>
+                                    <constraint firstAttribute="width" constant="100" id="QIe-OW-ByG"/>
+                                    <constraint firstAttribute="height" constant="100" id="tlW-aV-Qqr"/>
                                 </constraints>
-                            </imageView>
+                                <state key="normal" backgroundImage="AppIconWithShadow-Blue"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="WhiteAndBlackBackground"/>
                         <constraints>
-                            <constraint firstItem="y6y-gd-W8r" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="EgY-5u-zxh"/>
-                            <constraint firstItem="wMY-G1-WgY" firstAttribute="top" secondItem="y6y-gd-W8r" secondAttribute="bottom" constant="10" id="G0S-f3-hPK"/>
+                            <constraint firstItem="dlO-SR-m6m" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Bqm-hd-L2X"/>
                             <constraint firstItem="T3a-lw-6aZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gwd-z0-Qou"/>
-                            <constraint firstItem="wMY-G1-WgY" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="npj-lz-QjP"/>
+                            <constraint firstItem="wMY-G1-WgY" firstAttribute="top" secondItem="dlO-SR-m6m" secondAttribute="bottom" constant="10" id="hCd-7s-J87"/>
                             <constraint firstItem="wMY-G1-WgY" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="oR1-Sb-V3q"/>
                             <constraint firstItem="T3a-lw-6aZ" firstAttribute="top" secondItem="wMY-G1-WgY" secondAttribute="bottom" constant="10" id="tgZ-Gu-jq8"/>
+                            <constraint firstItem="dlO-SR-m6m" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="250" id="tnt-jr-xhi"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -55,7 +55,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="AppIconWithShadow" width="510" height="510"/>
+        <image name="AppIconWithShadow-Blue" width="60" height="60"/>
         <namedColor name="WhiteAndBlackBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
